{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 13,
  "lineage": "74962836-b9d3-9934-4c75-1f5057127a6a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "lambda_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:442042530672:loadbalancer/app/lambda-alb/225fe792310e2499",
            "arn_suffix": "app/lambda-alb/225fe792310e2499",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lambda-alb-125531938.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:442042530672:loadbalancer/app/lambda-alb/225fe792310e2499",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lambda-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0de2aa0731a33c203"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02082298ecf534f4a"
              },
              {
                "subnet_id": "subnet-076ed2b434bdb07bb"
              },
              {
                "subnet_id": "subnet-08eb773ab9ac592c3"
              }
            ],
            "subnets": [
              "subnet-02082298ecf534f4a",
              "subnet-076ed2b434bdb07bb",
              "subnet-08eb773ab9ac592c3"
            ],
            "vpc_id": "vpc-00add1acd514acecc",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.terraform-alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:442042530672:listener/app/lambda-alb/225fe792310e2499/46d68e53905fcdc0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:442042530672:targetgroup/lambda-target-group/f67b27c7ed438f5d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:442042530672:listener/app/lambda-alb/225fe792310e2499/46d68e53905fcdc0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:442042530672:loadbalancer/app/lambda-alb/225fe792310e2499",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_alb.lambda_alb",
            "aws_lb_target_group.lambda_tg",
            "aws_security_group.terraform-alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lambda_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:442042530672:targetgroup/lambda-target-group/f67b27c7ed438f5d",
            "arn_suffix": "targetgroup/lambda-target-group/f67b27c7ed438f5d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": false,
                "healthy_threshold": 5,
                "interval": 35,
                "matcher": "200",
                "path": "/",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:442042530672:targetgroup/lambda-target-group/f67b27c7ed438f5d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:442042530672:loadbalancer/app/lambda-alb/225fe792310e2499"
            ],
            "name": "lambda-target-group",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                  }
                ],
                "unhealthy_state_routing": [
                  {
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "lambda"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_group_lambda_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:442042530672:targetgroup/lambda-target-group/f67b27c7ed438f5d-20250527185005146700000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:442042530672:targetgroup/lambda-target-group/f67b27c7ed438f5d",
            "target_id": "arn:aws:lambda:ap-south-1:442042530672:function:TerraformLambdaFunction"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_role.lambda_exec_role",
            "aws_lambda_function.lamda_test",
            "aws_lb_target_group.lambda_tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442042530672:security-group/sg-0de2aa0731a33c203",
            "description": "Allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de2aa0731a33c203",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terroform-alb-sg",
            "name_prefix": "",
            "owner_id": "442042530672",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00add1acd514acecc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}